[gd_scene load_steps=6 format=2]

[ext_resource path="res://asstes/Bullets/bulletGreen_outline.png" type="Texture" id=1]
[ext_resource path="res://bullets/Bullet.gd" type="Script" id=2]
[ext_resource path="res://smokes/SmokeOrange.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.99999
height = 6.00003

[node name="Green" type="KinematicBody2D"]
script = ExtResource( 2 )
Smoke = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -2.88486e-05, -8 )
rotation = 3.14159
shape = SubResource( 4 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 30, 0 )

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
